methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value FALSE
var sawBaggle=FALSE 
              ^MethodsReturning:9: error: not found: value TRUE
        sawBaggle=TRUE
                  ^