methods.returning.MethodsReturning.scala.code
var x=0 
var sawBaggle=FALSE 
var y=0
def haveBaggle():Boolean = {
  while(!sawBaggle()){
    for(x<-0 to 6){
      forward();}
      if(isOverBaggle()){
        sawBaggle=TRUE
      }
     for (y<- 0 to 6){
       backward();
     }
      right();
  		forward();
  		left();
  }
    return sawBaggle
}